# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPLv2

  30 Nov 2004; Mike Frysinger <vapier@gentoo.org>:

    Fix the UML/coLinux check in init.d/clock #72937.

  26 Nov 2004; Roy Marples <uberlord@gentoo.org>:

    Fixed up address detection in apipa
    net.lo now checks for duplicate static IPv4 addresses before assigning
    iwconfig now supports preassociate and postassociate user hooks
    net.example - changed $1 to ${IFACE} in examples
    clarified lack of linux-wlan-ng support

  24 Nov 2004; Mike Frysinger <vapier@gentoo.org>:

    Allow users to specify charset option to dumpkeys when using unicode 
    in conf.d/keymaps #72225.  Also move all the init.d/keymap specific 
    options out of rc.conf and into conf.d/keymaps and add some config 
    checks to init.d/keymaps like the clock/hostname init.d scripts.

    Make sure /etc/rc.conf overrides conf.d files when starting up 
    critical services.  Should help out with transition from rc.conf.

  24 Nov 2004; Roy Marples <uberlord@gentoo.org>:

    Ensure all net-scripts modules depend on interface_variable function
    where applicable
    Fixed adsl stopping - #68934. Thanks to Andreas Kauer

  23 Nov 2004; Roy Marples <uberlord@gentoo.org>:

    iproute2 does not need to create dummy interfaces for aliases
    unlike ifconfig so we no longer do this
    We now bring down all aliases and addresses properly
    Split off some functions from net.lo into helpers.d/functions
    so that our DHCP helper scripts can use them too :)
    Deprecated interface specific setup in favour of a generic config
    macchanger brings interface up now - fixes #71929
    DHCP over VLAN now works - fixes #71860
    Disabled modified function checking as it's far too expensive on CPU
    and still isn't 100% reliable
    When specifing a module that isn't emerged, you now get an error
    telling you what to emerge